# tsfile-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  footer.rs  lib.rs  reader.rs
src/chunk/: reader.rs
src/encoding/: decoder.rs
src/file/: compress.rs  footer.rs  metadata.rs  mod.rs  reader.rs  statistics.rs  tsfile_search_reader.rs
src/metadata/: index.rs
src/utils/: cursor.rs  io.rs  mod.rs  queue.rs
tsfile/: Cargo.toml
tsfile/src/: error.rs  footer.rs  metadata.rs
tsfile/src/metadata/: bloom_filter.rs  index.rs
