[package]
name = "tsfile"
version = "0.0.1"
authors = ["liudw <liudw@apache.org>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotdb-lab/tsfile-rs"
documentation = "https://docs.rs/iotdb"
description = "Apache IoTDB TsFile written in Rust"
keywords = ["tsfile", "iotdb", "lib", "db"]

[workspace]


[dependencies]
byteorder = "1"
bit-set = "0.5.2"
varint = "0.9.0"
snap = "1.0.5"
murmurhash3 = "0.0.5"
